# icd203-lint

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  rule-proposal.md
.github/workflows/: ci.yml  release.yml
docs/: icd203-primer.md  icd203-primer.md.tmp
examples/: asset-profile-example.md  usage.sh
src/icd203_lint/: __init__.py.tmp  cli.py  core.py.tmp  registry.py
src/icd203_lint/rules/: __init__.py  assessment.py  attribution.py.tmp  base.py  base.py.tmp  quotes.py  sourcing.py  sourcing.py.tmp  tense.py.tmp
tests/: test_cli.py.tmp  test_core.py  test_fixtures.py  test_rules.py.tmp
tests/fixtures/bad/: 01-assess-no-confidence.md.tmp  02-our-judgment-no-confidence.md  03-attribution-bare-blame.md.tmp  04-attribution-no-context.md  05-single-source-high.md  06-single-source-moderate.md.tmp  07-future-unhedged.md.tmp  08-future-bare-shall.md  09-quote-unattributed.md  10-mixed-bad-report.md.tmp
tests/fixtures/good/: 01-assessment-with-confidence.md  02-low-confidence-callout.md  03-bottom-line-up-front.md  04-attribution-with-ttp.md  05-attribution-with-citation.md  06-future-with-estimative.md.tmp  07-operational-future.md.tmp  08-attributed-quote.md  09-short-quote-and-codeblock.md  10-mixed-clean-report.md.tmp
